--- a/css-j2bt6x/dashboard.css
+++ b/css-j2bt6x/dashboard.css
@@ -1,2 +1,252 @@
-/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/04 17:46:20 */
-#dashboard{width:600pt;}#dashboard img{cursor:pointer;}.frm img{object-fit:none;}#dashboard{min-width:320px;}#dashboard,#divMessage h1{margin-left:auto;}#divMessage,[class~=frm]{width:100%;}#dashboard{margin-bottom:10vh;}[class~=frm]{min-height:1.354166667in;}#dashboard,[class~=frm]{display:inline-flex;}#dashboard,[class~=frm]{flex-direction:column;}#divMessage h1,#dashboard{margin-right:auto;}[class~=frm]{margin-left:auto;}[class~=frm]{margin-right:auto;}.frm img{margin-left:.2em;}[class~=frm]{margin-bottom:3em;}#divMessage h1,.frm img{margin-bottom:auto;}[class~=entry]{width:auto;}#dashboard{margin-top:7.4em;}#dashboard,[class~=entry]{height:auto;}#dashboard{padding-left:1em;}#dashboard{padding-right:1em;}.frm img{margin-right:.2em;}#divMessage h1,.frm img{margin-top:auto;}.frm h1,#divMessage h1,[class~=cardNo] h1{font-family:"Roboto";}.frm h1,[class~=cardNo] h1{font-style:normal;}[class~=entry]{min-height:105pt;}#divMessage{height:.5625in;}[class~=entry]{border-left-width:.75pt;}#txtCardNo,#divMessage,[class~=entryHeader]{display:flex;}[class~=entry]{border-bottom-width:.75pt;}.frm h1{font-weight:900;}[class~=entry]{border-right-width:.75pt;}[class~=entry]{border-top-width:.75pt;}[class~=entry]{border-left-style:solid;}#divMessage{margin-left:.5em;}.frm h1{font-size:16.5pt;}[class~=entry]{border-bottom-style:solid;}#divMessage{margin-bottom:.5em;}[class~=entry]{border-right-style:solid;}[class~=entry]{border-top-style:solid;}#divMessage{margin-right:.5em;}[class~=entry]{border-left-color:white;}[class~=entry]{border-bottom-color:white;}#divMessage{margin-top:.5em;}#divMessage h1,[class~=cardNo] h1{font-weight:700;}#divMessage h1,.frm h1{line-height:28px;}[class~=entry]{border-right-color:white;}[class~=entry]{border-top-color:white;}[class~=entry]{border-image:none;}.frm h1,#divMessage h1,[class~=cardNo] h1{letter-spacing:.1em;}[class~=entry]{border-radius:4.5pt;}.frm h1,[class~=cardNo] h1{color:#fff;}#btnShow{opacity:.25;}#txtCardNo{width:40px;}[class~=entry]{margin-top:.5em;}[class~=entry]{padding-bottom:1em;}[class~=entry]{background:rgba(0,0,0,.05);}#divMessage h1,[class~=cardNo] h1{font-size:.875pc;}[class~=entryHeader],[class~=bannerLine]{width:98%;}#txtCardNo{min-width:2.5pc;}[class~=entryHeader]{height:auto;}[class~=cardNo] h1,[class~=entryHeader]{margin-left:auto;}#txtCardNo,[class~=entryHeader]{margin-bottom:auto;}#txtCardNo{height:40px;}[class~=entryHeader],[class~=cardNo] h1{margin-right:auto;}#txtCardNo{margin-left:.2em;}[class~=bannerLine],[class~=entryHeader]{margin-top:1em;}[class~=entryHeader]{justify-content:center;}#txtCardNo{margin-right:.2em;}[class~=cardNo] h1,#txtCardNo,#txtCardNo h1,[class~=textbox]{margin-top:auto;}[class~=bannerLine]{height:1px;}#txtCardNo,[class~=textbox]{border-left-width:.0625pc;}[class~=bannerLine]{background-color:white;}#txtCardNo,[class~=textbox]{border-bottom-width:.0625pc;}[class~=cardNo] h1,[class~=textbox]{line-height:.239583333in;}[class~=textbox],#txtCardNo{border-right-width:.0625pc;}[class~=bannerLine]{margin-left:auto;}[class~=bannerLine]{margin-right:auto;}[class~=bannerLine]{margin-bottom:.5em;}[class~=textbox],#txtCardNo{border-top-width:.0625pc;}[class~=bannerLine]{opacity:.3;}[class~=textbox]{margin-left:.2em;}#txtCardNo h1,[class~=cardNo] h1,[class~=textbox]{margin-bottom:auto;}[class~=textbox]{margin-right:.2em;}[class~=textbox]{width:88%;}[class~=cardEntry],[class~=textbox]{height:2.5pc;}#txtCardNo,[class~=textbox]{border-left-style:solid;}[class~=textbox],#txtCardNo{border-bottom-style:solid;}#txtCardNo,[class~=textbox]{border-right-style:solid;}[class~=textbox],#txtCardNo{border-top-style:solid;}[class~=textbox],#txtCardNo{border-left-color:#fff;}[class~=textbox],#txtCardNo{border-bottom-color:#fff;}[class~=textbox],#txtCardNo{border-right-color:#fff;}[class~=textbox]{border-top-color:#fff;}[class~=textbox]{border-image:none;}[class~=cardTitle] h1,[class~=textbox]{font-family:"Roboto";}#divMessage h1,[class~=cardTitle] h1{color:#fff;}[class~=textbox]{border-radius:.041666667in;}[class~=textbox],[class~=cardTitle] h1{font-style:normal;}#txtCardNo h1{margin-left:auto;}[class~=textbox]{background-color:transparent;}#txtCardNo h1{margin-right:auto;}[class~=cardTitle] h1{font-weight:700;}[class~=textbox]{font-weight:400;}[class~=cardTitle] h1,[class~=textbox]{font-size:.145833333in;}[class~=textbox],[class~=cardTitle] h1{letter-spacing:.1em;}[class~=textbox]{padding-left:.4em;}[class~=textbox]{padding-right:.4em;}[class~=textbox]{padding-top:auto;}[class~=textbox]{padding-bottom:auto;}::placeholder,[class~=textbox]{color:white;}[class~=textbox],[class~=cardNo]{outline:none;}[class~=cardLink],[class~=cardTitle],[class~=cardEntry],[class~=cardNo]{display:flex;}[class~=cardEntry]{width:98%;}[class~=cardEntry]{margin-top:1em;}[class~=cardEntry]{margin-left:auto;}[class~=cardEntry]{margin-right:auto;}#txtCardNo h1,[class~=cardTitle] h1{line-height:1.4375pc;}[class~=cardEntry]{margin-bottom:.5em;}[class~=cardEntry]{justify-content:center;}[class~=cardNo]{width:50px;}[class~=cardNo],[class~=cardTitle]{height:40px;}::placeholder{opacity:.5;}[class~=cardTitle] h1{margin-top:auto;}[class~=cardTitle] h1{margin-bottom:auto;}#txtCardNo{border-top-color:#fff;}[class~=cardTitle] h1{text-align:left;}[class~=cardTitle],[class~=cardNo],[class~=btnCardEdit],[class~=cardLink]{margin-left:.2em;}[class~=cardNo],[class~=cardTitle]{margin-bottom:auto;}[class~=cardNo],[class~=cardTitle],[class~=cardLink],[class~=btnCardEdit]{margin-right:.2em;}[class~=cardTitle],[class~=cardNo]{margin-top:auto;}[class~=cardLink],[class~=cardTitle],[class~=cardNo]{cursor:pointer;}#txtCardNo{border-image:none;}[class~=cardTitle],[class~=cardLink]{width:50%;}[class~=cardLink],#txtCardNo h1{font-family:"Roboto";}[class~=cardLink],#txtCardNo h1{font-style:normal;}[class~=cardTitle],[class~=cardLink]{overflow:hidden;}#txtCardNo h1{font-weight:400;}[class~=cardLink],#txtCardNo h1{font-size:14px;}[class~=cardLink]{height:.208333333in;}#txtCardNo{border-radius:.25pc;}[class~=cardLink],#txtCardNo{background-color:transparent;}[class~=cardLink]{margin-bottom:auto;}#txtCardNo h1,[class~=cardLink]{letter-spacing:.1em;}[class~=cardLink]{margin-top:auto;}[class~=cardLink]{word-break:keep-all;}[class~=cardLink]{outline:none;}[class~=cardLink]{border-left-width:medium;}[class~=cardLink]{border-bottom-width:medium;}[class~=cardLink]{border-right-width:medium;}[class~=cardLink]{border-top-width:medium;}[class~=cardLink]{border-left-style:none;}#txtCardNo h1{color:white;}[class~=cardLink]{border-bottom-style:none;}[class~=cardLink]{border-right-style:none;}[class~=cardLink]{border-top-style:none;}[class~=cardLink]{border-left-color:currentColor;}[class~=cardLink]{border-bottom-color:currentColor;}[class~=cardLink]{border-right-color:currentColor;}[class~=cardLink]{border-top-color:currentColor;}[class~=cardLink]{border-image:none;}[class~=cardLink]{font-weight:700;}[class~=cardLink]{line-height:1.4375pc;}[class~=cardLink]{color:#fff;}[class~=cardLink]{text-align:left;}[class~=btnCardEdit]{margin-bottom:auto;}:-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=btnCardEdit]{margin-top:auto;}::-ms-input-placeholder{color:rgba(255,255,255,.5);}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: white;
+    opacity: 0.5; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: rgba(255, 255, 255, 0.5)
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: rgba(255, 255, 255, 0.5)
+  }
+
+#dashboard {
+    width: 800px;
+    min-width: 320px;
+    margin:auto;
+    margin-top: 7.4em;
+    margin-bottom: 10vh;
+    height: auto;
+    padding-left: 1em;
+    padding-right: 1em;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+#dashboard img {
+    cursor: pointer;
+}
+
+.frm {
+    width: 100%;
+    min-height: 130px;
+    display: inline-flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 3em;
+}
+
+.frm img {
+    object-fit: none;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.frm h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 22px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+}
+
+.entry {
+    width: auto;
+    min-height: 140px;
+    height: auto;
+    border: 1px solid white;
+    border-radius: 6px;
+    margin-top: 0.5em;
+    padding-bottom: 1em;
+    background: rgba(0, 0, 0, 0.05);
+}
+
+.entryHeader {
+    display: flex;
+    width: 98%;
+    height: auto;
+    margin: auto;
+    margin-top: 1em;
+
+    justify-content: center;
+}
+
+
+.bannerLine {
+    width: 98%;
+    height: 1px;
+    background-color: white;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0.5em;
+    opacity: .3;
+}
+
+#divMessage {
+    width: 100%;
+    height: 54px;
+    display: flex;
+    margin: 0.5em;
+}
+
+#divMessage h1{
+    margin: auto;
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+}
+
+#btnShow {
+    opacity: .25;
+}
+
+
+#txtCardNo {
+    display: flex;
+    width: 40px;
+    min-width: 40px;
+    height: 40px;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+#txtCardNo h1 {
+    margin: auto;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: white;
+}
+
+.textbox {
+    margin: auto;
+    width: 88%;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    padding-left: .4em;
+    padding-right: .4em;
+    padding-top: auto;
+    padding-bottom: auto;
+    color: white;
+    outline: none;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.cardEntry {
+    display: flex;
+    width: 98%;
+    height: 40px;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0.5em;
+    justify-content: center;
+}
+
+
+.cardNo {
+    width: 50px;
+    height: 40px;
+    outline: none;
+    display: flex;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    cursor: pointer;
+}
+
+.cardNo h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin: auto;
+}
+
+.cardTitle {
+    width: 50%;
+    height: 40px;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    display: flex;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.cardTitle h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: left;    
+}
+
+
+.cardLink {
+    width: 50%;
+    height: 20px;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+    cursor: pointer;
+    background-color: transparent;
+    outline: none;
+    border: none;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: left;
+}
+
+.btnCardEdit {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+
+
