--- a/css-j2bt6x/faculty.css
+++ b/css-j2bt6x/faculty.css
@@ -1,2 +1,306 @@
-/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/04 17:47:04 */
-[class~=frm]{width:100%;}[class~=frm]{min-height:130px;}[class~=frm]{display:inline-flex;}[class~=frm]{flex-direction:column;}#faculty img{cursor:pointer;}[class~=frm]{margin-left:auto;}[class~=frm]{margin-right:auto;}[class~=frm]{margin-bottom:3em;}::placeholder{color:white;}.entry{width:auto;}.entry{min-height:1.458333333in;}#faculty{width:600pt;}[class~=entryHeader],#faculty,.entry{height:auto;}.entry{border-left-width:.010416667in;}.entry{border-bottom-width:.010416667in;}.entry{border-right-width:.010416667in;}#faculty{min-width:320px;}.frm img{object-fit:none;}.entry{border-top-width:.010416667in;}[class~=entryHeader],#faculty,#divMessage h1{margin-left:auto;}.entry{border-left-style:solid;}.entry{border-bottom-style:solid;}#faculty{margin-bottom:10vh;}.entry{border-right-style:solid;}#faculty,#divMessage h1,[class~=entryHeader]{margin-right:auto;}.entry{border-top-style:solid;}.entry{border-left-color:white;}#faculty{margin-top:7.4em;}.entry{border-bottom-color:white;}.entry{border-right-color:white;}.frm img{margin-left:.2em;}.entry{border-top-color:white;}.entry{border-image:none;}[class~=entryHeader],.frm img,#divMessage h1{margin-bottom:auto;}.entry{border-radius:6px;}::placeholder{opacity:.5;}.entry{margin-top:.5em;}.entry{padding-bottom:.5em;}.entry{background:rgba(0,0,0,.05);}[class~=entryHeader]{display:flex;}[class~=bannerLine],[class~=entryHeader]{width:98%;}.frm img{margin-right:.2em;}#divMessage h1,.frm img{margin-top:auto;}#divMessage h1,[class~=frm] h1{font-family:"Roboto";}:-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=entryHeader],[class~=bannerLine]{margin-top:1em;}#faculty{padding-left:1em;}[class~=frm] h1{font-style:normal;}[class~=entryHeader]{justify-content:space-between;}[class~=bannerLine]{height:.0625pc;}[class~=bannerLine]{background-color:white;}[class~=bannerLine]{margin-left:auto;}#faculty{padding-right:1em;}[class~=frm] h1{font-weight:900;}[class~=bannerLine]{margin-right:auto;}[class~=bannerLine]{margin-bottom:.5em;}#faculty{display:inline-flex;}[class~=bannerLine]{opacity:.3;}[class~=textbox]{margin-left:.2em;}[class~=textbox]{margin-bottom:auto;}[class~=textbox]{margin-right:.2em;}#faculty{flex-direction:column;}[class~=textbox]{margin-top:auto;}#divMessage,[class~=textbox]{width:100%;}[class~=textbox]{height:.416666667in;}#divMessage{height:.5625in;}[class~=textbox]{border-left-width:.0625pc;}[class~=textbox]{border-bottom-width:.0625pc;}[class~=textbox]{border-right-width:.0625pc;}[class~=textbox]{border-top-width:.0625pc;}[class~=textbox]{border-left-style:solid;}[class~=textbox]{border-bottom-style:solid;}[class~=textbox]{border-right-style:solid;}#txtCourseNo,#divMessage{display:flex;}#divMessage{margin-left:.5em;}#divMessage{margin-bottom:.5em;}[class~=textbox]{border-top-style:solid;}[class~=textbox]{border-left-color:#fff;}[class~=textbox]{border-bottom-color:#fff;}#divMessage{margin-right:.5em;}[class~=textbox]{border-right-color:#fff;}[class~=textbox]{border-top-color:#fff;}[class~=frm] h1{font-size:1.375pc;}#divMessage{margin-top:.5em;}[class~=frm] h1{line-height:21pt;}[class~=textbox]{border-image:none;}[class~=frm] h1,[class~=textbox]{letter-spacing:.1em;}#btnShow{opacity:.25;}[class~=dropFaculty],[class~=textbox]{border-radius:4px;}#divMessage h1{font-style:italic;}[class~=textbox],[class~=dropFaculty]{background-color:transparent;}[class~=textbox],[class~=dropFaculty]{font-family:"Roboto";}[class~=textbox]{font-style:normal;}[class~=textbox]{font-weight:400;}[class~=textbox],#divMessage h1{font-size:14px;}[class~=frm] h1{color:#fff;}[class~=textbox]{line-height:23px;}#txtCourseNo{width:40px;}[class~=textbox]{padding-left:.4em;}::-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=textbox]{padding-right:.4em;}[class~=textbox]{padding-top:auto;}[class~=textbox]{padding-bottom:auto;}[class~=textbox]{color:white;}[class~=textbox]{outline:none;}#txtCourseNo,[class~=dropFaculty]{margin-left:.2em;}[class~=dropFaculty],#divMessage h1{font-weight:700;}#txtCourseNo{min-width:2.5pc;}#txtCourseNo{height:30pt;}[class~=dropFaculty],#txtCourseNo{margin-bottom:auto;}#txtCourseNo,[class~=dropFaculty]{margin-right:.2em;}[class~=dropFaculty],#txtCourseNo{margin-top:auto;}[class~=dropFaculty]{width:100%;}[class~=dropFaculty]{height:.4375in;}#txtCourseNo,[class~=dropFaculty]{border-left-width:.75pt;}[class~=dropFaculty],#txtCourseNo{border-bottom-width:.75pt;}#txtCourseNo,[class~=dropFaculty]{border-right-width:.75pt;}#txtCourseNo,[class~=dropFaculty]{border-top-width:.75pt;}[class~=dropFaculty],#txtCourseNo{border-left-style:solid;}[class~=dropFaculty],#txtCourseNo{border-bottom-style:solid;}#txtCourseNo,[class~=dropFaculty]{border-right-style:solid;}[class~=dropFaculty],#txtCourseNo{border-top-style:solid;}#txtCourseNo,[class~=dropFaculty]{border-left-color:#fff;}#txtCourseNo,[class~=dropFaculty]{border-bottom-color:#fff;}[class~=dropFaculty]{border-right-color:#fff;}[class~=dropFaculty]{border-top-color:#fff;}[class~=dropFaculty]{border-image:none;}#divMessage h1{line-height:21pt;}[class~=optionFaculty],[class~=facultyEntry] h1{font-family:"Roboto";}[class~=optionFaculty],[class~=dropFaculty],[class~=facultyEntry] h1{font-style:normal;}#divMessage h1,[class~=dropFaculty],[class~=optionFaculty],[class~=facultyEntry] h1{letter-spacing:.1em;}[class~=facultyEntry] h1,[class~=dropFaculty]{font-size:14px;}[class~=facultyEntry] h1,[class~=dropFaculty]{line-height:1.4375pc;}[class~=dropFaculty]{padding-left:.4em;}#divMessage h1{color:#fff;}[class~=dropFaculty]{padding-right:.4em;}[class~=dropFaculty]{padding-top:auto;}#txtCourseNo h1{margin-left:auto;}[class~=facultyEntry] h1,[class~=optionFaculty]{font-weight:700;}[class~=dropFaculty]{padding-bottom:auto;}[class~=dropFaculty]{color:white;}[class~=dropFaculty],[class~=courseNo]{outline:none;}[class~=optionFaculty]{color:#303030;}#txtCourseNo h1{margin-bottom:auto;}[class~=optionFaculty]{font-size:16px;}[class~=optionFaculty]{line-height:21pt;}[class~=optionFaculty]{text-align:left;}[class~=optionFaculty]{padding-top:1em;}[class~=optionFaculty]{padding-bottom:1em;}[class~=courseNo],[class~=facultyTitle],[class~=facultyName],[class~=facultyDesc],.facultyEntry,.facultyEmail,#txtCardNo{display:flex;}.facultyEntry{width:98%;}#txtCourseNo h1{margin-right:auto;}#txtCardNo,.facultyEntry{height:2.5pc;}.facultyEntry{margin-top:1em;}.facultyEntry{margin-bottom:.5em;}.facultyEntry{margin-left:auto;}.facultyEntry{margin-right:auto;}.facultyEntry{justify-content:space-between;}[class~=facultyTitle],[class~=btnDelAssignment],[class~=courseNo],[class~=facultyName],.facultyEmail,[class~=btnDelCourse],#txtCardNo,[class~=facultyDesc]{margin-left:.2em;}[class~=facultyName],[class~=facultyTitle],[class~=facultyDesc],[class~=courseNo]{margin-right:.2em;}[class~=courseNo]{width:3.125pc;}#txtCourseNo{border-right-color:#fff;}[class~=courseNo]{height:31.5pt;}#txtCourseNo{border-top-color:#fff;}#txtCourseNo{border-image:none;}#txtCourseNo{border-radius:4px;}#txtCourseNo,[class~=courseNo]{background-color:transparent;}[class~=facultyTitle]{width:100%;}#txtCourseNo h1,#txtCardNo{margin-top:auto;}.facultyEmail,[class~=facultyDesc],[class~=facultyName],[class~=facultyTitle]{height:.416666667in;}[class~=facultyEntry] h1{color:#fff;}[class~=facultyDesc],.facultyEmail,[class~=facultyEntry] h1,[class~=facultyTitle],[class~=facultyName]{margin-top:auto;}[class~=facultyTitle],[class~=facultyEntry] h1,[class~=facultyName],[class~=facultyDesc],.facultyEmail{margin-bottom:auto;}[class~=facultyName],.facultyEmail,[class~=facultyTitle],[class~=facultyDesc]{overflow:hidden;}[class~=facultyName],.facultyEmail,[class~=facultyTitle],[class~=facultyDesc]{word-break:keep-all;}[class~=facultyDesc]{width:50%;}#txtCardNo{width:.416666667in;}#txtCardNo{min-width:.416666667in;}[class~=facultyName],.facultyEmail{width:55%;}#txtCourseNo h1{font-family:"Roboto";}[class~=btnDelCourse],[class~=btnDelAssignment],#txtCardNo{margin-bottom:auto;}#txtCourseNo h1{font-style:normal;}[class~=btnDelAssignment],#txtCardNo,[class~=btnDelCourse],.facultyEmail{margin-right:.2em;}#txtCourseNo h1{font-weight:400;}#txtCardNo{border-left-width:.0625pc;}#txtCardNo{border-bottom-width:.0625pc;}#txtCourseNo h1{font-size:10.5pt;}#txtCourseNo h1{line-height:23px;}[class~=facultyEntry] h1{text-align:left;}#txtCardNo{border-right-width:.0625pc;}[class~=btnDelAssignment],[class~=btnDelCourse]{margin-top:auto;}#txtCardNo{border-top-width:.0625pc;}#txtCardNo{border-left-style:solid;}#txtCourseNo h1{letter-spacing:.1em;}#txtCardNo{border-bottom-style:solid;}#txtCardNo{border-right-style:solid;}#txtCardNo{border-top-style:solid;}#txtCardNo{border-left-color:#fff;}#txtCardNo{border-bottom-color:#fff;}#txtCardNo{border-right-color:#fff;}#txtCardNo{border-top-color:#fff;}#txtCardNo{border-image:none;}#txtCardNo{border-radius:3pt;}#txtCardNo{background-color:transparent;}#txtCourseNo h1{color:white;}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: white;
+    opacity: 0.5; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: rgba(255, 255, 255, 0.5)
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: rgba(255, 255, 255, 0.5)
+  }
+
+#faculty {
+    width: 800px;
+    min-width: 320px;
+    margin:auto;
+    margin-top: 7.4em;
+    margin-bottom: 10vh;
+    height: auto;
+    padding-left: 1em;
+    padding-right: 1em;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+#faculty img {
+    cursor: pointer;
+}
+
+.frm {
+    width: 100%;
+    min-height: 130px;
+    display: inline-flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 3em;
+}
+
+.frm img {
+    object-fit: none;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.frm h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 22px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+}
+
+.entry {
+    width: auto;
+    min-height: 140px;
+    height: auto;
+    border: 1px solid white;
+    border-radius: 6px;
+    margin-top: 0.5em;
+    padding-bottom: 0.5em;
+    background: rgba(0, 0, 0, 0.05);
+}
+
+.entryHeader {
+    display: flex;
+    width: 98%;
+    height: auto;
+    margin: auto;
+    margin-top: 1em;
+    justify-content: space-between;
+}
+
+
+.bannerLine {
+    width: 98%;
+    height: 1px;
+    background-color: white;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0.5em;
+    opacity: .3;
+}
+
+#divMessage {
+    width: 100%;
+    height: 54px;
+    display: flex;
+    margin: 0.5em;
+}
+
+#divMessage h1{
+    margin: auto;
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+}
+
+#btnShow {
+    opacity: .25;
+}
+
+
+#txtCourseNo {
+    display: flex;
+    width: 40px;
+    min-width: 40px;
+    height: 40px;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+#txtCourseNo h1 {
+    margin: auto;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: white;
+}
+
+.textbox {
+    margin: auto;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    padding-left: .4em;
+    padding-right: .4em;
+    padding-top: auto;
+    padding-bottom: auto;
+    color: white;
+    outline: none;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+#txtCardNo {
+    display: flex;
+    width: 40px;
+    min-width: 40px;
+    height: 40px;
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+.dropFaculty {
+    margin: auto;
+    width: 100%;
+    height: 42px;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    padding-left: .4em;
+    padding-right: .4em;
+    padding-top: auto;
+    padding-bottom: auto;
+    color: white;
+    outline: none;
+    margin-left: .2em;
+    margin-right: .2em; 
+}
+
+.optionFaculty {
+    color: #303030;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    text-align: left;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    
+}
+
+.facultyEntry {
+    display: flex;
+    width: 98%;
+    height: 40px;
+    margin-top: 1em;
+    margin-bottom: .5em;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+}
+
+.facultyEntry h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: left;
+    
+}
+
+.courseNo {
+    margin-left: .2em;
+    margin-right: .2em;
+    width: 50px;
+    height: 42px;
+    outline: none;
+    display: flex;
+    background-color: transparent;
+}
+
+.facultyTitle {
+    width: 100%;
+    height: 40px;
+    margin-left: .2em;
+    margin-right: .2em;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+}
+
+.facultyDesc {
+    width: 50%;
+    height: 40px;
+    margin-left: .2em;
+    margin-right: .2em;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+}
+
+.facultyName {
+    width: 55%;
+    height: 40px;
+    margin-left: .2em;
+    margin-right: .2em;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+}
+
+.facultyEmail {
+    width: 55%;
+    height: 40px;
+    margin-left: .2em;
+    margin-right: .2em;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+    overflow: hidden;
+    word-break:keep-all;
+}
+
+
+.btnDelCourse {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.btnDelAssignment {
+    margin: auto;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+
