--- a/css-j2bt6x/404.css
+++ b/css-j2bt6x/404.css
@@ -1,2 +1,56 @@
-/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/04 17:37:09 */
-#frm404{z-index:1;}#frmHeader h1,#frmBody h1{font-family:"Roboto";}#frm404{width:22.5pc;}#frm404{height:225pt;}#frm404{border-left-width:.010416667in;}#frmHeader h1,#frmBody h1{font-style:normal;}#frm404{border-bottom-width:.010416667in;}#frmHeader h1{font-weight:700;}#frm404{border-right-width:.010416667in;}#frm404{border-top-width:.010416667in;}#frm404{border-left-style:solid;}#frmHeader h1{font-size:.875pc;}#frm404{border-bottom-style:solid;}#frm404{border-right-style:solid;}#frm404{border-top-style:solid;}#frm404{border-left-color:white;}#frm404{border-bottom-color:white;}#frm404{border-right-color:white;}#frm404{border-top-color:white;}#frmBody h1,#frmHeader h1{line-height:38px;}#frmHeader h1,#frmBody h1{letter-spacing:.1em;}#frm404{border-image:none;}#frm404{border-radius:4.5pt;}#frmHeader h1,#frm404,#line,#frmBody h1{margin-left:auto;}#frmBody h1,#frmHeader h1{color:#fff;}#line,#frm404,#frmBody h1,#frmHeader h1{margin-bottom:auto;}#frmBody h1,#frmHeader h1,#frm404,#line{margin-right:auto;}#frmBody h1,#frm404,#line,#frmHeader h1{margin-top:auto;}#frm404{background-color:rgba(0,0,0,.05);}#frm404{aspect-ratio:1/1;}#frm404{display:inline-flex;}#frm404{flex-direction:column;}#frmBody,#frmHeader{width:100%;}#frmHeader{height:.416666667in;}#frmHeader,#frmBody{display:flex;}#frmBody h1{font-weight:900;}#frmBody h1{font-size:1.041666667in;}#frmBody{height:100%;}#line{width:96%;}#line{height:.75pt;}#line{background-color:white;}#line{opacity:.3;}
+
+
+#frm404 {
+    z-index: 1;
+    width: 360px;
+    height: 300px;
+    border: 1px solid white;
+    border-radius: 6px;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.05);
+    aspect-ratio: 1/1;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+#frmHeader {
+    width: 100%;
+    height: 40px;
+    display: flex;
+}
+
+#frmHeader h1{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 38px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin: auto;
+}
+
+#frmBody {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+#frmBody h1{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 100px;
+    line-height: 38px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    margin: auto;
+}
+
+#line {
+    width: 96%;
+    height: 1px;
+    background-color: white;
+    margin: auto;
+    opacity: .3;
+}
