--- a/css-j2bt6x/dashboard.css
+++ b/css-j2bt6x/dashboard.css
@@ -92,7 +92,7 @@
     width: 100%;
     height: 40px;
     display: flex;
-    margin: 0.5em;
+    margin: auto;
     word-break: break-all;
     background-color: rebeccapurple;
 }
