--- a/css-j2bt6x/dashboard.css
+++ b/css-j2bt6x/dashboard.css
@@ -90,11 +90,12 @@
 
 #divMessage {
     width: 100%;
-    height: 40px;
+    min-height: 40px;
+    height: auto;
     display: flex;
     margin: auto;
     word-break: break-all;
-    background-color: rebeccapurple;
+    padding: 1em;
 }
 
 #divMessage h1{
