--- a/css-j2bt6x/dashboard.css
+++ b/css-j2bt6x/dashboard.css
@@ -97,6 +97,7 @@
     margin-bottom: auto;
     word-break: break-all;
     justify-content: center;
+    background-color: rebeccapurple;
 }
 
 #divMessage h1{
